--- a/list.html
+++ b/list.html
@@ -4,23 +4,23 @@
         <title>list</title>
     </head>
     <body>
-    <h2>ordered list</h2>
+    <h2>intro to my self</h2>
      <ol>
-        <li>Home</li>
-        <li>about us</li>
-        <li>Contas us</li>
+        <li>syed zain ullah</li>
+        <li>grade 6c</li>
+        <li>insight international school</li>
      </ol>
-     <h2>unordered list</h2>
+     <h2>intro to my self</h2>
       <ul>
-     <li>Home</li>
-        <li>Abouts us</li>
-        <li>Contas us</li>
+     <li>syedzainullah</li>
+        <li>Grade6c</li>
+        <li>insight international school</li>
      </ul>
      <h2>definition list</h2>
       <dl>
-        <dt>Home</dt>
-        <dt>Abouts us</dt>
-        <dt>Comtas us</dt>
+        <dt>syed zain ullah</dt>
+        <dt>Grade 6</dt>
+        <dt>Insight International School</dt>
       </dl>
 
     </body>
