--- a/list.html
+++ b/list.html
@@ -4,22 +4,22 @@
         <title>list</title>
     </head>
     <body>
-    <h2>intro to my self</h2>
+    <h2>ordered list</h2>
      <ol>
-        <li>syed zain ullah</li>
-        <li>grade 6c</li>
-        <li>insight international school</li>
+        <li>insight inter national</li>
+        <li>abouts us</li>
+        <li>contact us</li>
      </ol>
-     <h2>intro to my self</h2>
+     <h2>undered list</h2>
       <ul>
-     <li>syedzainullah</li>
-        <li>Grade6c</li>
+     <li>abouts us</li>
+        <li>contact as</li>
         <li>insight international school</li>
      </ul>
      <h2>definition list</h2>
       <dl>
-        <dt>syed zain ullah</dt>
-        <dt>Grade 6</dt>
+        <dt>abouts ua</dt>
+        <dt>contact</dt>
         <dt>Insight International School</dt>
       </dl>
 
